--- a/README
+++ b/README
@@ -2,3 +2,6 @@ In Main.html it will be a front-end navigation bar where user can click on the b
 a different tab that contains different information. The navigation will be implemented using bootstrap.
 
 To display the new tab, the user will have to enter the "admin" into the user and password field under the login tab.
+
+Each day there will be an information of the location and the map. Each information and map will have an link for
+more information.
